--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,29 +1,19 @@
 version: 0.2
 phases:
+  install:
+    runtime-versions:
+      python: 3.4
   pre_build:
     commands:
-      - echo Logging in to Amazon ECR...
-      #pip install --upgrade awscli==1.18.17 ### Here is my update - and it works
-      #aws --version
       - aws ecr get-login-password --region us-east-1 | docker login --username AWS --password-stdin 642512558314.dkr.ecr.us-east-1.amazonaws.com
-      #$(aws ecr get-login --no-include-email --region us-east-1)
       - REPOSITORY_URI=642512558314.dkr.ecr.us-east-1.amazonaws.com/firstpipeline
-      - COMMIT_HASH=$(echo $CODEBUILD_RESOLVED_SOURCE_VERSION | cut -c 1-7)
-      - IMAGE_TAG=build-$(echo $CODEBUILD_BUILD_ID | awk -F":" '{print $2}')   
-build:
+  build:
     commands:
-      - echo Build started on `date`
-      - echo Building the Docker image...
-      - docker build -t $REPOSITORY_URI:latest .
-      - docker tag $REPOSITORY_URI:latest $REPOSITORY_URI:$IMAGE_TAG
-post_build:
+      - docker build -t firstpipeline .
+      - docker tag firstpipeline:latest 642512558314.dkr.ecr.us-east-1.amazonaws.com/firstpipeline:latest
+  post_build:
     commands:
-      - echo Build completed on `date`
-      - echo Pushing the Docker images...
-      - docker push $REPOSITORY_URI:latest
-      - docker push $REPOSITORY_URI:$IMAGE_TAG
-      - echo Writing image definitions file...
-      - printf '[{"name":"firstpipeline","imageUri":"%s"}]' $REPOSITORY_URI:$IMAGE_TAG > imagedefinitions.json
-      - cat imagedefinitions.json
+      - docker push 642512558314.dkr.ecr.us-east-1.amazonaws.com/firstpipeline:latest
+      - printf '[{"name":"firstpipeline","imageUri":"%s"}]' 642512558314.dkr.ecr.us-east-1.amazonaws.com/firstpipeline:latest > imagedefinitions.json
 artifacts:
   files: imagedefinitions.json
